# HomRec

./: .gitattributes  .gitignore  CHANGELOG.txt  CMakeLists.txt  FREE.txt  Makefile  README.md  SUPPORT.md  build_native.py  commands.md  config.ini  engine.py  homrec.py  homrec_clean.py  homrec_core.c  homrec_native.py  homrec_settings.json  hr_app_logic.cpp  hr_audio.cpp  hr_console.cpp  hr_console_bridge.py  hr_console_pipe_server.cpp  hr_display_info.cpp  hr_dxgi_capture.cpp  hr_encoder_helpers.c  hr_ffmpeg_runner.cpp  hr_framequeue.cpp  hr_pipeline.cpp  hr_preview.cpp  hr_profile_io.cpp  hr_ringbuf.cpp  hr_settings.cpp  hr_stopwatch.cpp  hr_tools.cpp  hr_update.cpp  hr_version.cpp  index.html  requirements.txt  resource.rc
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
Assets/L/: my_theme.hrt
chrec/: README.md
core/: __init__.py  constants.py  ffmpeg_utils.py  hrc.py  languages.py
core_engine/: core_adapter.py
core_engine/src/: CMakeLists.txt  audio_mixer.c  audio_mixer.h  bindings.cpp  capture.cpp  capture.hpp  color_convert.c  color_convert.h  encoder.cpp  encoder.hpp  engine.cpp  engine.hpp  frame_pool.hpp  gpu_scaler.cpp  gpu_scaler.hpp  monitor_enum.cpp  monitor_enum.hpp  perf_timer.h  ring_buffer.hpp
docs/: CNAME  docs.html  download.html  faq.html  index.html  news.html
main/: verified_authors.json
plugin_engine/: __init__.py  api.py  loader.py  pluginmodule.py  sandbox.py
plugins/: BetterUI.hrp  Streaming.hrp
src/: capture_engine.cpp  capture_engine.hpp  homrec.py  homrec_clean.py  homrec_core.c  homrec_native.py  hr_app_logic.cpp  hr_capture_ctl.cpp  hr_console.cpp  hr_console_bridge.py  hr_console_pipe_server.cpp  hr_core_manager.py  hr_display_info.cpp  hr_dxgi_capture.cpp  hr_encoder_helpers.c  hr_ffmpeg_runner.cpp  hr_framequeue.cpp  hr_hotkey.cpp  hr_log.cpp  hr_log.h  hr_pipeline.cpp  hr_plugin_engine.py  hr_profile_io.cpp  hr_ringbuf.cpp  hr_settings.cpp  hr_stopwatch.cpp  hr_terminal.c  hr_tools.cpp  hr_ui_utils.cpp  hr_update.cpp  hr_version.cpp  win_main.cpp
src/core/: logging_setup.py
src/homrec_app/: __init__.py  advanced_settings_dialog.py  app.py  custom_messagebox.py
src/homrec_app/core/: _paths.py  constants.py  languages.py  logging_setup.py  optional_deps.py  profile_io.py  system_utils.py  updates.py
src/homrec_app/dialogs/: advanced_settings_dialog.py  audio_level_meter.py  audio_panel.py  overlay_manager.py  overlays_dock_panel.py  settings_dialog.py  welcome_dialog.py
src/homrec_app/mixins/: audio_mixin.py  recording_mixin.py  settings_mixin.py  ui_mixin.py
src/plugins/: lua_api.cpp  lua_api.h  lua_engine.cpp  lua_engine.h
src/ui/: advanced_settings_dialog.cpp  advanced_settings_dialog.h  app_state.h  audio_panel.cpp  audio_panel.h  console_window.cpp  console_window.h  custom_messagebox.cpp  custom_messagebox.h  hrc_config.cpp  hrc_config.h  language.cpp  language.h  log_viewer_dialog.cpp  log_viewer_dialog.h  main_frame.cpp  main_frame.h  main_window.cpp  main_window.h  overlay_manager.cpp  overlay_manager.h  overlays_dock_panel.cpp  overlays_dock_panel.h  pc_analytics_dialog.cpp  pc_analytics_dialog.h  recording_controller.cpp  recording_controller.h  settings_dialog.cpp  settings_dialog.h  theme.cpp  theme.h  themed_widgets.cpp  themed_widgets.h  version.h  welcome_dialog.cpp  welcome_dialog.h  win32_theme.cpp  win32_theme.h  window_picker_dialog.cpp  window_picker_dialog.h
tools/: pack_hrp.py  patch_hrp_author.py
tools/plugin_sources/folders/: main.lua  plugin.json
ui/: __init__.py  advanced_dialog.py  app.py  lang_editor.py  library.py  rule_engine.py  settings_dialog.py  theme_editor.py  widgets.py
